# Agentic-AI-Guide

./: .gitignore  main.py  pyproject.toml
02-LangGraph Tutorial/: 1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb
02-LangGraph Tutorial/CampusX/: 01_sequential_workflow.ipynb  02_parallel_workflow.ipynb  03_conditional_workflow.ipynb  04_iterative_workflow.ipynb  05_chatbot_using_langgraph.ipynb  06_persistence.ipynb  07_langsmith_implementation.ipynb  08_tools.ipynb  09_build_mcp_client.ipynb  10_rag.ipynb  11_human_in_the_loop.ipynb  12_subgraphs.ipynb  13_llm_memory.ipynb  13_llm_short-term_memory.ipynb  14_llm_long-term_memory.ipynb  docker-compose.yml  langchain_sarvam.py
02-LangGraph Tutorial/CampusX/Chatbot/: chatbot.db  chatbot.db-shm  chatbot.db-wal  langgraph_backend.py  langgraph_backend2.py  mcp_server.py  streamlit_frontend.py
03-MCP Guide/: categories.json  expenses.db  main.py  pyproject.toml
04-Remote MCP Server/: main.py  pyproject.toml
05-CrewAI Tutorial/: main.py  pyproject.toml
05-CrewAI Tutorial/notebooks/: 01_email_agent.ipynb
1-BasicChatbot/: 1-basic_chatbot.ipynb
